--- a/index.html
+++ b/index.html
@@ -4,16 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Project Panda Resources</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css" integrity="sha512-58P9Hy7II0YeXLv+iFiLCv1rtLW47xmiRpC1oFafeKNShp8V5bKV/ciVtYqbk2YfxXQMt58DjNfkXFOn62xE+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styless/style.css">
 </head>
 <body>
   <header>
-
+    <nav class="navbar display widht">
+      <div>
+        <img src="./images/logo.png" alt="">
+      </div>
+      <div>
+        <input type="text" placeholder="search">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="bx bx-magnifying-glass"></i>
+      </div>
+      <div class="ul">
+        <ul class="display">
+          <li><a class="dark_tartiary" href="">Home</a></li>
+          <li><a href="">Product</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <main>
 
   </main>
   <footer>
-    
+
   </footer>
 </body>
 </html>
