--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styless/style.css">
 </head>
 <body>
@@ -31,6 +35,15 @@
         </ul>
       </div>
     </nav>
+    <di class="banner display widht">
+      <div class="banner_content">
+        <h1 class="banner_h1">Mi LED TV 4A PRO 32</h1>
+        <p class="banner_p dark_secondary">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+        <span class="banner_span">$1289</span><br>
+        <button class="banner_button">BUY NOW</button>
+      </div>
+      <img src="images/banner-images/tv.png" alt="">
+    </div>
   </header>
   <main>
 
